--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <meta name="robots" content="" />
     <meta name="keywords" content="school, school admin, management" >
     <meta name="description" content="Admin for Learn for Care" >
-    <meta property="og:title" content="Akademi : React School and Education Management Admin Template" >
-    <meta property="og:description" content="Akademi - the ultimate admin dashboard and React template. Specially designed for professionals, and for business. Akademi provides advanced features and an easy-to-use interface for creating a top-quality website with School and Education Template">
-    <meta property="og:image" content="https://akademi.dexignlab.com/react/social-image.png" >
+    <meta property="og:title" content="Admin" >
+    <meta property="og:description" content="Admin-learn for care website">
+    <!-- <meta property="og:image" content="https://akademi.dexignlab.com/react/social-image.png" > -->
     <meta name="format-detection" content="telephone=no">
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />    
